# dagster_utils

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: dependendabot-auto-merge.yml  python-package.yml
dagster_utils/: decorator_utils.py  factories.py  model.yaml  operations.py  parse.py  pickle.py  pipeline.py  profile.py  profiles.yaml  project.yaml  registry.py  resources.py  serialise.py  sources.py  tasks.py  utils.py
dagster_utils/components/: __init__.py  el_component.py  hashing.py  pandas_to_sql_component.sql.py  registry.py  source.py  source_component.py  task.py
dagster_utils/el_model/: duckdb.py  el_model.py  factories.py  resources.py  sql.py
dagster_utils/pipeline/: factories.py  resources.py  sql_resources  utils
dagster_utils/resources/: abc.py  connections.py  file.py  sql.py
dagster_utils/tests/: el_model_01.yml  test_utils.py
dagster_utils/tests/utils/: test_registry.py
dagster_utils/utils/: __init__.py  decorator_utils.py  hashing.py  registry.py  serialisers.py
