[project]
name = "dagster_utils"
version = "0.0.1"
authors = [
  { name="davidc789", email="davidchen1218@outlook.com" },
]
description = "A simple package that provides useful resources and functions when working with dagster"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "cloudpickle>=3.1.1",
    "dagster>=1.11.2",
    "dagster-dg-cli>=1.11.13",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[project.urls]
Homepage = "https://github.com/davidc789/flows"
Issues = "https://github.com/davidc789/flows/issues"

[project.entry-points]
"dagster_dg_cli.registry_modules" = { dagster_utils = "dagster_utils.components"}

#[build-system]
#requires = ["setuptools >= 77.0.3"]
#build-backend = "setuptools.build_meta"
#
#[tool.setuptools]
#package-dir = {"": "dagster_utils"}

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "dagster-webserver>=1.10.21",
    "pandas-stubs>=2.2.3.250527",
    "pytest>=8.4.1",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_utils"
code_location_target_module = "dagster_utils.definitions"
